# mlpr-cart-cross-selling

./: .gitignore  Dockerfile.temp  docker-compose-run-fastapi.sh  handler_fastapi.py  negative_pairs.parquet  nginx.conf  positive_pairs.parquet  product_list.parquet  pyproject.toml
project/mlpr_cart/: main.py
project/mlpr_cart/data/: cart_selected.parquet  category_pairs.csv  category_pairs_tfidf.csv  features.npz  labels.parquet  negative_pairs.parquet  positive_pairs.parquet
project/mlpr_cart/data_exploration/: dummy_cart.csv  dummy_pairs.csv  dummy_products.csv  eda.ipynb
project/mlpr_cart/data_pipeline/: build_features.py  db.py  fetch_data.py  generate_category_pairs.py  generate_pairs.py  load_data.py
project/mlpr_cart/model_testing/: manual_test.py
project/mlpr_cart/model_training/: train_model.py  train_model_tuned.py
project/mlpr_cart/models/: encoder.joblib  model.joblib  model_metadata.joblib
project/mlpr_cart/route/: main.py
project/mlpr_cart/services/: generate_recommendation.py
